--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
+p{
+  margin: 0;
+  padding: 0;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+/* HEADER  */
 #top_header {
   border-bottom: 2px solid rgba(100, 92, 92, 0.56);
   background: url(../img/bg.png);
@@ -10,22 +25,36 @@
   text-align: center;
   font-size: 16px;
   font-weight: 600;
+  text-decoration: none;
+}
+
+#top_header ul li a:hover{
+  color: #fdb813;
 }
 
 .hotLine a{
   display: block;
   color: #e8e8e8;
   padding: 10px;
-  text-align: center;
+  text-align: left;
   font-size: 16px;
   font-weight: 600;
+  text-decoration: none;
 }
 
-.social a span i{
+.hotLine a:hover{
+  color: #fdb813;
+}
+
+.social a i{
   font-size: 30px;
   color: #e8e8e8;
   padding: 10px;
   transition: .3s;
+}
+
+.social a i:hover{
+  color: #fdb813;
 }
 
 
@@ -35,7 +64,7 @@
   border-radius: 0px !important;
 }
 
-.navbar-brand > img {
+.navbar-brand  img {
     display: block;
     width: 30%;
     height: auto;
@@ -50,4 +79,74 @@
 
 .navbar-menu ul li a:hover {
   color: #fdb813;
+}
+
+/* FOOTER  */
+#footer{
+  background: url(../img/bg.png);
+}
+
+.footer_title {
+  font-size: 20px;
+  font-weight: 600;
+  position: relative;
+  color: rgba(239, 239, 239, 0.64);
+}
+
+.footer_item ul {
+  list-style-type: none;
+  padding: 5px 0;
+  margin: 0;
+  color: rgba(239, 239, 239, 0.64);
+}
+
+.footer_item ul li{
+  padding: 5px;
+}
+
+.end{
+  padding: 30px;
+  color: white;
+}
+
+/* GIA VE  */
+
+.content_giaVe{
+  padding: 50px;
+}
+
+.content_giaVe p{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+/* UU DAI  */
+#wrap{
+  background-color: #191919;
+}
+
+.title_uudai {
+  position: relative;
+  color: #dedddd;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 40px;
+  padding-bottom: 20px;
+}
+
+.title_uudai::after {
+  position: absolute;
+  content: '';
+  width: 20%;
+  height: 2px;
+  background-color: #dedddd;
+  top: -5px;
+  left: 50%;
+  transform: translate(-50%,0);
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
 }
