--- a/src/App.css
+++ b/src/App.css
@@ -248,3 +248,34 @@ p{
 .my-active{
   border-bottom: 2px solid #fdb813;
 }
+
+/* MODAL REGISTER  */
+
+.control-label {
+  color: #a9a9a9;
+  font-style: italic;
+  font-size: 15px;
+}
+
+.form-control:focus {
+  border-color: #fdb813 !important;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+.register_send {
+  border: none;
+  font-size: 14px;
+  background-color: #F9C227;
+  color: black;
+  padding: 7px 25px;
+  border-radius: 20px;
+  transition: .3s;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.register_send:hover {
+  background-color: #F9C227;
+  color: #fff;
+}
