--- a/src/App.css
+++ b/src/App.css
@@ -251,6 +251,7 @@ p{
 
 /* MODAL REGISTER  */
 
+
 .control-label {
   color: #a9a9a9;
   font-style: italic;
@@ -278,4 +279,9 @@ p{
 .register_send:hover {
   background-color: #F9C227;
   color: #fff;
+}
+
+/* MODAL LOGIN  */
+.login-change-regis {
+  cursor: pointer;
 }
