--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ p{
   padding: 0;
 }
 
+ul{
+  list-style-type: none;
+}
+
 /* HEADER  */
 #top_header {
   border-bottom: 2px solid rgba(100, 92, 92, 0.56);
