--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,30 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-p{
-  margin: 0;
-  padding: 0;
-}
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+p {
   margin: 0;
   padding: 0;
 }
 
-ul{
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
   list-style-type: none;
 }
 
@@ -32,11 +44,11 @@ ul{
   text-decoration: none;
 }
 
-#top_header ul li a:hover{
+#top_header ul li a:hover {
   color: #fdb813;
 }
 
-.hotLine a{
+.hotLine a {
   display: block;
   color: #e8e8e8;
   padding: 10px;
@@ -46,18 +58,18 @@ ul{
   text-decoration: none;
 }
 
-.hotLine a:hover{
+.hotLine a:hover {
   color: #fdb813;
 }
 
-.social a i{
+.social a i {
   font-size: 30px;
   color: #e8e8e8;
   padding: 10px;
   transition: .3s;
 }
 
-.social a i:hover{
+.social a i:hover {
   color: #fdb813;
 }
 
@@ -68,17 +80,17 @@ ul{
   border-radius: 0px !important;
 }
 
-.navbar-brand  img {
-    display: block;
-    width: 30%;
-    height: auto;
+.navbar-brand img {
+  display: block;
+  width: 30%;
+  height: auto;
 }
 
-.navbar-menu ul li a{
-    font-weight: 700;
-    font-size: 18px;
-    color: #e8e8e8;
-    transition: .3s;
+.navbar-menu ul li a {
+  font-weight: 700;
+  font-size: 18px;
+  color: #e8e8e8;
+  transition: .3s;
 }
 
 .navbar-menu ul li a:hover {
@@ -86,7 +98,7 @@ ul{
 }
 
 /* FOOTER  */
-#footer{
+#footer {
   background: url(../img/bg.png);
 }
 
@@ -104,28 +116,28 @@ ul{
   color: rgba(239, 239, 239, 0.64);
 }
 
-.footer_item ul li{
+.footer_item ul li {
   padding: 5px;
 }
 
-.end{
+.end {
   padding: 30px;
   color: white;
 }
 
 /* GIA VE  */
 
-.content_giaVe{
+.content_giaVe {
   padding: 50px;
 }
 
-.content_giaVe p{
+.content_giaVe p {
   font-size: 20px;
   font-weight: 600;
 }
 
 /* UU DAI  */
-#wrap{
+#wrap {
   background-color: #191919;
 }
 
@@ -147,7 +159,7 @@ ul{
   background-color: #dedddd;
   top: -5px;
   left: 50%;
-  transform: translate(-50%,0);
+  transform: translate(-50%, 0);
 }
 
 .item img {
@@ -166,10 +178,10 @@ ul{
   background-color: none !important;
   margin: 0 !important;
   padding: 0 !important;
-  border-radius: 0 !important; 
+  border-radius: 0 !important;
 }
 
-.owl-next span{
+.owl-next span {
   font-size: 80px;
   color: grey;
 }
@@ -184,19 +196,19 @@ ul{
   border-radius: 0 !important;
 }
 
-.owl-prev span{
+.owl-prev span {
   font-size: 80px;
   color: grey;
 }
 
-.item img{
+.item img {
   display: block;
   height: 700px;
   max-width: 100%;
   line-height: 1;
 }
 
-.owl-dots{
+.owl-dots {
   position: absolute;
   z-index: 15;
   bottom: 2%;
@@ -220,7 +232,7 @@ ul{
 
 #slider-movie .heading {
   position: relative;
-  border-bottom: solid 1px rgba(255,255,255,0.4);
+  border-bottom: solid 1px rgba(255, 255, 255, 0.4);
   padding-bottom: 10px;
   width: 95%;
   margin: 0 auto;
@@ -249,7 +261,7 @@ ul{
   margin-left: 5%;
 }
 
-.my-active{
+.my-active {
   border-bottom: 2px solid #fdb813;
 }
 
@@ -282,4 +294,12 @@ ul{
 .register_send:hover {
   background-color: #F9C227;
   color: #fff;
+}
+
+.content {
+  padding: auto auto;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  height: 100% !important;
+  width: 100% !important;
 }
