--- a/src/App.css
+++ b/src/App.css
@@ -165,15 +165,18 @@ ul {
 .item img {
   width: 100%;
   height: 100%;
+  max-height: 100%;
 }
 
 
 /* HOMEPAGE__CAROUSEL  */
-
+.carousel{
+  background-color: #060c12;
+}
 
 .item img,
 .owl-next {
-  position: absolute !important;
+  position: relative !important;
   right: 0px !important;
   top: 30%;
   background-color: none !important;
